Add java 9+ module info.